--- a/src/composer.json
+++ b/src/composer.json
@@ -1,7 +1,8 @@
 {
   "require": {
     "guzzlehttp/guzzle": "^6.3",
-    "symfony/http-foundation": "^v3.4"
+    "symfony/http-foundation": "^v3.4",
+    "twig/twig": "^2.0"
   },
   "autoload": {
     "psr-4": {
